--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,25 @@
 {
-    "liveServer.settings.port": 5501
+	"cSpell.words": [
+		"Brownlee",
+		"Caet",
+		"cascadingstylesheets",
+		"csshtml",
+		"didn",
+		"flexbox",
+		"htmlcss",
+		"hypertextmarkuplanguage",
+		"Kadane's",
+		"macbook",
+		"Markiplier",
+		"Nacamulli",
+		"Parens",
+		"Pichai",
+		"Shoutout",
+		"Sundar",
+		"supersimple",
+		"supersimpledev",
+		"Toks",
+		"Veritasium",
+		"youtube"
+	]
 }
